force-app/main/default/objects/Deployment_Instruction__c/Deployment_Instruction__c.object-meta.xml
<CustomObject>
    <description>Object to capture deployment instructions.</description>
    <label>Deployment Instruction</label>
    <nameField>
        <displayFormat>DI-{0000}</displayFormat>
        <label>Deployment Instruction</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Instructions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>