force-app/main/default/objects/Deployment_Instruction__c/fields/Does_this_step_include_Data_Migration__c.field-meta.xml
<CustomField>
    <fullName>Does_this_step_include_Data_Migration__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this checkbox, incase this step is for data migration.</inlineHelpText>
    <label>Does this step include Data Migration?</label>
    <type>Checkbox</type>
</CustomField>