force-app/main/default/objects/Deployment_Instruction__c/fields/Environments_to_be_Executed__c.field-meta.xml
<CustomField>
    <fullName>Environments_to_be_Executed__c</fullName>
    <label>Environments to be Executed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Pre Prod</fullName>
            </value>
            <value>
                <fullName>HotFix</fullName>
            </value>
            <value>
                <fullName>Prod</fullName>
                <isActive>false</isActive>
                <label>Prod</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>