force-app/main/default/objects/Deployment_Instruction__c/fields/Required_Post_Refresh__c.field-meta.xml
<CustomField>
    <fullName>Required_Post_Refresh__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this incase this step needs to be followed every time the lower environment is refreshed.</inlineHelpText>
    <label>Required Post Refresh?</label>
    <type>Checkbox</type>
</CustomField>