force-app/main/default/objects/Deployment_Instruction__c/fields/Steps_to_be_Executed__c.field-meta.xml
<CustomField>
    <fullName>Steps_to_be_Executed__c</fullName>
    <inlineHelpText>Provide in detail all the steps that needs to be followed</inlineHelpText>
    <label>Steps to be Executed</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>